--- a/public/index.html
+++ b/public/index.html
@@ -34,5 +34,26 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-database.js"></script>
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+         https://firebase.google.com/docs/web/setup#config-web-app -->
+
+    <script>
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: 'AIzaSyCSvhybF41c9Uk7dP1wjxLRcn7Ho1vz5hg',
+        authDomain: 'chocrop-scheduler.firebaseapp.com',
+        databaseURL: 'https://chocrop-scheduler.firebaseio.com',
+        projectId: 'chocrop-scheduler',
+        storageBucket: '',
+        messagingSenderId: '1086390906030',
+        appId: '1:1086390906030:web:57436bd8bc074bfe',
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+    </script>
   </body>
 </html>
